<resources>
    <string name="bnb_logout">Đăng xuất</string>
    <string name="bnb_setting">Cài đặt</string>
    <string name="bnb_reset_database">Khởi tạo lại dữ liệu Drone</string>
    <string name="bnb_qa">QnA</string>

    <string name="data_base_name">drone_list.sqlite</string>
    <!--Map-->
    <string name="app_name">Quản lý rừng</string>
    <string name="bnb_forest">Map</string>
    <string name="bnb_drone">Drone</string>
    <string name="bnb_action">Action</string>
    <string name="bnb_profile">Profile</string>
    <string name="bnb_admin_tool">Users</string>
    <string name="toolBarMap_0">Bản đồ</string>
    <string name="toolBarMap_1">Khoang vùng thả Drone</string>
    <!--AreaSelector-->
    <string name="area_latidude">Vĩ độ:</string>
    <string name="area_longitude">Kinh độ:</string>
    <string name="area_width">Width(Đ-T):</string>
    <string name="area_height">Height(B-N):</string>
    <string name="area_size">Diện tích:</string>
    <string name="intentKey">areaSelector</string>
    <string-array name="spinnerDroneSelector">
        <item>Hệ thống - Gần nhất</item>
        <item>Thủ công</item>
    </string-array>
    <string-array name="spinnerRoute">
        <item>LT 1: ngẫu nhiên</item>
        <item>LT 2: liên tiếp</item>
    </string-array>
    <string-array name="spinnerDroneHeight">
        <item>10m</item>
        <item>15m</item>
        <item>20m</item>
        <item>25m</item>
    </string-array>
    <string-array name="spinnerDroneTime">
        <item>30p</item>
        <item>45p</item>
        <item>60p</item>
        <item>90p</item>
    </string-array>

    <!--User Profile-->
    <string name="tab_text_1">Thông tin</string>
    <string name="tab_text_2">Đổi mật khẩu</string>
    <string name="tab_text_3">Hoạt động</string>
    <string name="bnb_changePass">Change Password</string>
    <string name="bnb_updateProfile">Update Profile</string>

    <!--Drone-->
    <string name="bundleDroneStaus">droneStatus</string>
    <string name="bundleDroneInfo">droneInfo</string>
    <string name="id">Id:</string>
    <string name="drone_id">Id:</string>
    <string name="drone_model">Model:</string>
    <string name="drone_mfg">Ngày SX:</string>
    <string name="drone_status">Trạng thái:</string>
    <string name="drone_energy">Năng lượng:</string>
    <string name="drone_user">Người giám sát:</string>
    <string name="drone_pos">Tọa độ:</string>
    <string name="drone_height">Độ cao:</string>
    <string name="drone_time">Thời gian bay:</string>

    <string name="d">DroneActivity</string>
    <string name="tab_drone_monitor">Giám sát</string>
    <string name="tab_drone_free">Đang rảnh</string>
    <string name="tab_drone_maintenance">Bảo trì</string>

    <string name="tab_users_1">Danh sách</string>
    <string name="tab_users_2">Thêm tài khoản</string>

    <string name="google_map_key">AIzaSyBHSlkKiNt33Y7RvKhiuoHMx2uWB2y5B00</string>

    <string name="tab_action_1">Video</string>
    <string name="tab_action_2">Phân tích</string>
    <string name="tab_action_3">Thống kê</string>
    <string name="tab_action_4">Tổng hợp</string>
    <string name="tab_action_5">Báo cáo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
